# hw_14_1

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: main.py  oop_class_category.py  oop_class_product.py
tests/: conftest.py  test_category.py  test_product.py
