[project]
name = "hw-14-1"
version = "0.1.0"
description = ""
authors = [
    {name = "ilya",email = "ilifud98@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
icloud = "^0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

